# Matrix-to-Hessenberg-form

./: CMakeLists.txt  Hessenberg_form.cpp  README.md  l_mul.cpp  main.h  make_vector.cpp  make_vector.h  mul.cpp  mul.h  r_mul.cpp
headers/: creating_matrix.h  hessenberg.h  multiplication_by_the_reflection_matrix.h  reflection_vector.h  test.h
include/: apply_reflection.h  reflection_vector.h
ish/: CMakeCache.txt  Makefile  cmake_install.cmake  prog
my/: correct_flags.txt  in.txt
src/: CMakeLists.txt  Hessenberg_form.cpp  apply_reflection.cpp  creating_matrix.cpp  hessenberg.cpp  multiplication_by_the_reflection_matrix.cpp  reflection_vector.cpp  test.cpp
test/: CMakeLists.txt  Hessenberg_form.cpp  test.cpp
